refactor : Cars 매직 스트링을 상수처리
- ErrorMessage 로 getMaxPosition() 에서 예외가 발생하는 이유를 명시